organized css, added asteroid page and thumbnail to index

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<link rel="shortcut icon" type="image/x-icon" href="media/favicon.ico">
 		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Karla:400,400italic,700,700italic" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css?family=Rokkitt|Open+Sans:300italic,400italic,600italic,700italic,400,300,600,700" rel='stylesheet'>
+		<link href="https://fonts.googleapis.com/css?family=Rokkitt%7COpen+Sans:300italic,400italic,600italic,700italic,400,300,600,700" rel='stylesheet'>
 		<title>Ryan Bell</title>
 	</head>
 	<body>
@@ -65,11 +65,11 @@
 -->
 					<div class="row">
 						<div class="portfolio-thumb">
-							<a href="./switchblade.html"><img src="./media/sbthumb.png"></a> 
+							<a href="./switchblade.html"><img src="./media/sbthumb.png" alt=""></a> 
 							<p><b>SwitchBlade</b> &nbsp;&nbsp;Lorim Ipsum group project</p>
 						</div>
 						<div class="portfolio-thumb">
-							<a href="./minion.html"><img src="./media/minionfront.png"></a> 
+							<a href="./minion.html"><img src="./media/minionfront.png" alt=""></a> 
 							<p><b>Minion</b> &nbsp;&nbsp;Lorem Ipsum</p>
 						</div>
 					</div>
@@ -81,10 +81,10 @@
 							<p><b>Music Visualizer</b></p>
 						</div>
 						<div class="portfolio-thumb">
-							<a href="./music.html">
-								<img src="./media/musicthumb.png" alt="">
+							<a href="./asteroids.html">
+								<img src="./media/asteroidthumb.png" alt="">
 							</a>
-							<p><b>Music Visualizer</b></p>
+							<p><b>Asteroids</b></p>
 						</div>
 					</div>
 				</div>
