Removed placeholder text

--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
 					<div class="row">
 						<div class="portfolio-thumb">
 							<a href="./switchblade.html"><img src="./media/sbthumb.png" alt=""></a> 
-							<p><b>SwitchBlade</b> &nbsp;&nbsp;Lorim Ipsum group project</p>
+							<p><b>SwitchBlade</b></p>
 						</div>
 						<div class="portfolio-thumb">
 							<a href="./minion.html"><img src="./media/minionfront.png" alt=""></a> 
-							<p><b>Minion</b> &nbsp;&nbsp;Lorem Ipsum</p>
+							<p><b>Minion</b></p>
 						</div>
 					</div>
 					<div class="row">
