code to meet second version of the music visualizer

--- a/330/index.html
+++ b/330/index.html
@@ -36,15 +36,10 @@
 		<p>I am a 3rd year at RIT pursuing Game Design and Development and Software Engineering majors. I have a 3D modeling hobby and I am looking to get into to field of path tracers and other physical based rendering applications.</p>
 		<img src="./me.jpg" alt="" width="200">
 		<h2>Excercies</h2>
-		<a href="./smiley.html">Smiley</a>
-		<br>
-		<a href="./speed_circles.html">Speed Circles</a>
-		<br>
 		<a href="./audio.html">Audio Visualizer</a>
 		<br>
-		<a href="./game.html">Game</a>
+		<a href="./audio2.html">Audio Visualizer Part 2</a>
 		<br>
-		<a href="./service.html">Service</a>
 		<script>
 			const topCtx = document.getElementsByTagName("canvas")[1].getContext("2d");
 			//fade out the circles with semi-trans layer
