code for the 3rd part of the visualizer ice

--- a/330/index.html
+++ b/330/index.html
@@ -40,6 +40,8 @@
 		<br>
 		<a href="./audio2.html">Audio Visualizer Part 2</a>
 		<br>
+		<a href="./audio2.html">Audio Visualizer Part 3</a>
+		<br>
 		<script>
 			const topCtx = document.getElementsByTagName("canvas")[1].getContext("2d");
 			//fade out the circles with semi-trans layer
