code for part two of boomshine

--- a/330/index.html
+++ b/330/index.html
@@ -42,6 +42,12 @@
 		<br>
 		<a href="./audio2.html">Audio Visualizer Part 3</a>
 		<br>
+		<a href="./BoomshineA/boomshine.html">Boomshine A</a>
+		<br>
+		<a href="./BoomshineB/boomshine.html">Boomshine B</a>
+		<br>
+		<a href="./BoomshineC/boomshine.html">Boomshine C</a>
+		<br>
 		<script>
 			const topCtx = document.getElementsByTagName("canvas")[1].getContext("2d");
 			//fade out the circles with semi-trans layer
