--- a/330/BoomshineE/boomshine.html
+++ b/330/BoomshineE/boomshine.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8" />
 	<style>
 		canvas{border:1px solid gray;}
+		#audioControls { display: none;}
 	</style>
 	<title>Boomshine</title>
 </head>
@@ -11,6 +12,10 @@
 	<canvas>
 		Get a real browser!
 	</canvas>
+	<section id="audioControls">
+		<audio id="bgAudio" src='media/background.mp3' controls loop></audio>
+		<audio id="effectAudio"></audio>
+	</section>
 	<script src='js/utilities.js'></script>
 	<script src='js/loader.js'></script>
 	<script src='js/main.js'></script>
