--- a/330/BoomshineE/boomshine.html
+++ b/330/BoomshineE/boomshine.html
@@ -19,5 +19,7 @@
 	<script src='js/utilities.js'></script>
 	<script src='js/loader.js'></script>
 	<script src='js/main.js'></script>
+	<script src='js/keys.js'></script>
+	<script src='js/sound.js'></script>
 </body>
 </html>
