linked ice parts on the homepage

--- a/330/index.html
+++ b/330/index.html
@@ -48,6 +48,10 @@
 		<br>
 		<a href="./BoomshineC/boomshine.html">Boomshine C</a>
 		<br>
+		<a href="./BoomshineD/boomshine.html">Boomshine D</a>
+		<br>
+		<a href="./BoomshineE/boomshine.html">Boomshine E</a>
+		<br>
 		<script>
 			const topCtx = document.getElementsByTagName("canvas")[1].getContext("2d");
 			//fade out the circles with semi-trans layer
