added music visualizer project

--- a/330/index.html
+++ b/330/index.html
@@ -52,6 +52,8 @@
 		<br>
 		<a href="./BoomshineE/boomshine.html">Boomshine E</a>
 		<br>
+		<a href="./visualizer">Music Visualizer</a>
+		<br>
 		<script>
 			const topCtx = document.getElementsByTagName("canvas")[1].getContext("2d");
 			//fade out the circles with semi-trans layer
