--- a/330/index.html
+++ b/330/index.html
@@ -52,6 +52,8 @@
 		<br>
 		<a href="./BoomshineE/boomshine.html">Boomshine E</a>
 		<br>
+		<a href="./BoomshineG/boomshine.html">Boomshine G</a>
+		<br>
 		<a href="./visualizer">Music Visualizer</a>
 		<br>
 		<script>
