--- a/330/BoomshineG/boomshine.html
+++ b/330/BoomshineG/boomshine.html
@@ -39,6 +39,7 @@
 		<audio id="bgAudio" src='media/background.mp3' controls loop></audio>
 		<audio id="effectAudio"></audio>
 	</section>
+	<script src='js/emitter.js'></script>
 	<script src='js/utilities.js'></script>
 	<script src='js/loader.js'></script>
 	<script src='js/main.js'></script>
