--- a/330/Game/index.html
+++ b/330/Game/index.html
@@ -7,6 +7,7 @@
                 overflow: hidden;
             }
         </style>
+        <script src="utils/keys.js"></script>
         <script>
             function resize(canvas){
                 canvas.width = window.innerWidth;
@@ -45,15 +46,18 @@
                     clear : function(context){
                         context.clearRect(0,0,o.width, o.height);
                     },
-                    render : function(context, row){
-                        row = row || 0;
-                        context.drawImage(
+                    render : function(ops){
+                        ops.x = ops.x || 0;
+                        ops.y = ops.y || 0;
+                        ops.row = ops.row || 0;
+                        ops.context.drawImage(
                             o.img,
                             o.frame * o.width,
-                            row * o.height,
+                            ops.row * o.height,
                             o.width,
                             o.height,
-                            0,0,
+                            ops.x,
+                            ops.y,
                             o.width,
                             o.height);
 
@@ -77,7 +81,7 @@
             function gameloop(){
                 player.update();
                 player.clear(context);
-                player.render(context,3);
+                player.render({context: context, row: 3});
                 window.requestAnimationFrame(gameloop);
             }
             gameloop();
