--- a/330/Game/index.html
+++ b/330/Game/index.html
@@ -8,9 +8,15 @@
                 margin: 0px;
                 overflow: hidden;
             }
+            canvas {
+                position: absolute;
+                top: 0;
+                left: 0;
+            }
         </style>
         <script src="utils/keys.js"></script>
         <script src='utils/animation.js'></script>
+        <script src='scripts/map.js'></script>
         <script src='scripts/player.js'></script>
         <script>
             function resize(canvas){
@@ -25,19 +31,24 @@
             }
             
             window.onload = () => {
-                let canvas = document.getElementById('canvas1');
-                resize(canvas);
-                let context = canvas.getContext('2d');
-                
-                let player = createPlayer(canvas.width/2, canvas.height/2);
+                let canvas1 = document.getElementById('canvas1');
+                resize(canvas1);
+                let context1 = canvas1.getContext('2d');
+
+                let canvas2 = document.getElementById('canvas2');
+                resize(canvas2);
+                let context2 = canvas2.getContext('2d');
+
+                let player = createPlayer(canvas1.width/2, canvas1.height/2);
+                let map = createMap();
 
                 //TODO: better asset loading
                 player.idle.loadImage();
                 player.running.loadImage();
 
                 function gameloop(){
-                    player.update(context);
-                    player.render(context);
+                    player.update(context1);
+                    player.render(context1);
                     window.requestAnimationFrame(gameloop);
                 }
                 gameloop();
@@ -47,5 +58,6 @@
     </head>
     <body>
         <canvas id="canvas1"></canvas>
+        <canvas id="canvas2"></canvas>
     </body>
 </html>
