cheaply added variation in the terrain textures

--- a/330/Game/index.html
+++ b/330/Game/index.html
@@ -14,7 +14,8 @@
                 left: 0;
             }
         </style>
-        <script src="utils/keys.js"></script>
+        <script src='utils/helper.js'></script>
+        <script src='utils/keys.js'></script>
         <script src='utils/animation.js'></script>
         <script src='scripts/map.js'></script>
         <script src='scripts/player.js'></script>
@@ -46,7 +47,7 @@
                     width : 64,
                     height : 64,
                     direction_count : 1,
-                    frame_count : 1,
+                    frame_count : 20,
                     animation_speed : 0.0
                 });
                 map[1] = sprite({
@@ -54,7 +55,7 @@
                     width : 64,
                     height : 64,
                     direction_count : 1,
-                    frame_count : 1,
+                    frame_count : 30,
                     animation_speed : 0.0
                 });
                 
