Switched to https for file fetch to avoid mixed src warnings

--- a/330/eventjaunce/index.html
+++ b/330/eventjaunce/index.html
@@ -12,7 +12,7 @@
   <script>
   "use strict";
 
-	var EVENTFUL_URL = "http://api.eventful.com/json/events/search?callback=jsonLoaded&app_key="
+	var EVENTFUL_URL = "https://api.eventful.com/json/events/search?callback=jsonLoaded&app_key="
 	var API_KEY = "Z94gwqLVtLBxb2W9";
 	var value;
 	var EventObj;
