--- a/330/maps1/index.html
+++ b/330/maps1/index.html
@@ -50,6 +50,7 @@
 		<p><button id="buildingZoomButton">Building Zoom (20)</button></p>
 		<p><button id="isometric">Isometric View (18)</button></p>
 		<script src="./data/coffee-data.js"></script>
+		<script src="./data/building-data.js"></script>
     <script>
       var map, infowindow;
       function initMap() {
@@ -63,6 +64,10 @@
 
 				coffeeShops.forEach((v)=>{
 					addMarker(v.latitude, v.longitude, v.title);
+				});
+				
+				buildings.forEach((v)=>{
+					drawPolygon(v.path, v.title);
 				});
 
 				map.mapTypeId = 'satellite';
@@ -86,6 +91,19 @@
 					position: position,
 					content: "<b>" + msg + "</b>"
 				});
+			}
+
+			function drawPolygon(paths, title){
+				 var build = new google.maps.Polygon({
+						paths: paths,
+						strokeColor: '#FF0000',
+						strokeOpacity: 0.8,
+						strokeWeight: 2,
+						fillColor: '#FF0000',
+						fillOpacity: 0.35
+					});
+					build.setMap(map);
+
 			}
 
 			document.querySelector('#worldZoomButton').onclick = function(){
