--- a/d3/index.html
+++ b/d3/index.html
@@ -9,7 +9,8 @@
 	<body>
 
 		<!--
-				- libnotify patch
+				- cvim smooth scroll
+				- spellin error on mongod docs
 				- ffmpeg command from vse
 				- push polybar/finish
 				- github pages
