--- a/d3/index.html
+++ b/d3/index.html
@@ -10,7 +10,8 @@
 
 		<!--
 				- cvim smooth scroll
-				- spellin error on mongod docs
+				- spelling error on mongod docs
+				- automatic socket async data resolution
 				- ffmpeg command from vse
 				- push polybar/finish
 				- github pages
