added asteroid gif and github logo/links to pages

--- a/asteroids.html
+++ b/asteroids.html
@@ -23,5 +23,8 @@
 				<img src = "./media/asteroids.gif">
 			</div>
 		</div>
+		<a href="https://github.com/Ryan-Bell/asteroids">
+			<img class="github" src="./media/githublogo.svg">
+		</a>
 	</body>
 </html>
