--- a/music.html
+++ b/music.html
@@ -30,5 +30,8 @@
 				<img src = "./media/musicend.png">
 			</div>
 		</div>
+		<a href="https://github.com/Ryan-Bell/processingmusicvisualizer">
+			<img class="github" src="./media/githublogo.svg">
+		</a>
 	</body>
 </html>
