--- a/switchblade.html
+++ b/switchblade.html
@@ -27,5 +27,8 @@
 				<img src = "./media/sbgame.png">
 			</div>
 		</div>
+		<a href="https://github.com/HawkDanny/SwitchBlade">
+			<img class="github" src="./media/githublogo.svg">
+		</a>
 	</body>
 </html>
