--- a/index.html
+++ b/index.html
@@ -65,26 +65,32 @@
 -->
 					<div class="row">
 						<div class="portfolio-thumb">
-							<a href="./switchblade.html"><img src="./media/sbthumb.png" alt=""></a> 
+							<a href="./switchblade.html"><img src="./media/sbthumb.png" alt="SwitchBlade Project"></a> 
 							<p><b>SwitchBlade</b></p>
 						</div>
 						<div class="portfolio-thumb">
-							<a href="./minion.html"><img src="./media/minionfront.png" alt=""></a> 
+							<a href="./minion.html"><img src="./media/minionfront.png" alt="Minion Project"></a> 
 							<p><b>Minion</b></p>
 						</div>
 					</div>
 					<div class="row">
 						<div class="portfolio-thumb">
 							<a href="./music.html">
-								<img src="./media/musicthumb.png" alt="">
+								<img src="./media/musicthumb.png" alt="Music Visualizer Project">
 							</a>
 							<p><b>Music Visualizer</b></p>
 						</div>
 						<div class="portfolio-thumb">
 							<a href="./asteroids.html">
-								<img src="./media/asteroidthumb.png" alt="">
+								<img src="./media/asteroidthumb.png" alt="Asteroid Project">
 							</a>
 							<p><b>Asteroids</b></p>
+						</div>
+						<div class="portfolio-thumb portfolio-big">
+							<a href="./starwars.html">
+								<img src="./media/asteroidthumb.png" alt="Star Wars Project">
+							</a>
+							<p><b>Star Wars Edit</b></p>
 						</div>
 					</div>
 				</div>
