removed about me section and added star wars thumb

--- a/index.html
+++ b/index.html
@@ -15,61 +15,61 @@
 		<header>
 				<a class="inner" href="./index.html" >RYAN BELL</a>
 		</header>
-			<div id="about">
-				<p>About Me</p>
-				<div id="console">
-					&gt; Ryan.education<br>
-					<span class="answer">&nbsp;&nbsp;=&gt; "Rochester Institute of Technology"</span><br>	
-					<br>
-					&gt; Ryan.majors<br>
-					<span class="answer">&nbsp;&nbsp;=&gt; ["Software Engineering", "Game Design and Development"]</span><br>		
-					<br>
-					&gt; Ryan.graduation<br>
-					<span class="answer">&nbsp;&nbsp;=&gt; "May 2019"</span><br>
-					<br>
-					&gt; Ryan.interests<br>
-					<span class="answer">&nbsp;&nbsp;=&gt; ["3D modeling", "Programming", "Music", "Path Tracers"]</span><br>		
+		<!--<div id="about">-->
+			<!--<p>About Me</p>-->
+			<!--<div id="console">-->
+				<!--&gt; Ryan.education<br>-->
+				<!--<span class="answer">&nbsp;&nbsp;=&gt; "Rochester Institute of Technology"</span><br>-->
+				<!--<br>-->
+				<!--&gt; Ryan.majors<br>-->
+				<!--<span class="answer">&nbsp;&nbsp;=&gt; ["Software Engineering", "Game Design and Development"]</span><br>-->
+				<!--<br>-->
+				<!--&gt; Ryan.graduation<br>-->
+				<!--<span class="answer">&nbsp;&nbsp;=&gt; "May 2019"</span><br>-->
+				<!--<br>-->
+				<!--&gt; Ryan.interests<br>-->
+				<!--<span class="answer">&nbsp;&nbsp;=&gt; ["3D modeling", "Programming", "Music", "Path Tracers"]</span><br>-->
 
-					<br>
-					&gt; Ryan.links<br>
-					<span class="answer">&nbsp;&nbsp;=&gt; ["<a target="_blank" href="https://github.com/Ryan-Bell">Github</a>", "<a target="_blank" href="mailto:rjb1928@rit.edu">Email</a>", "<a target="_blank" href="ryanbellresume.pdf">Resume</a>"]</span><br>		
-					<br>
+				<!--<br>-->
+				<!--&gt; Ryan.links<br>-->
+				<!--<span class="answer">&nbsp;&nbsp;=&gt; ["<a target="_blank" href="https://github.com/Ryan-Bell">Github</a>", "<a target="_blank" href="mailto:rjb1928@rit.edu">Email</a>", "<a target="_blank" href="ryanbellresume.pdf">Resume</a>"]</span><br>-->
+				<!--<br>-->
 
-					&gt; Ryan.experience<br>
-					<span class="answer">
-						&nbsp;&nbsp;=&gt; &#123;<br>	
-						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; "<a target="_blank" href="http://bricksimple.com">BrickSimple</a>": &#123;<br>
-						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; "role": "Built virtual reality apps for the HTC Vive using Unity",<br>
-						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; "start date": "June 2016",<br>
-						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; "end date": "August 2016"<br>
-						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&#125;,<br>
-						
-						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; "<a target="_blank" href="http://www.geaviation.com">General Electric Aviation</a>": &#123;<br>
-						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; "role": "Built an OAuth npm module, built a resource tracking site",<br>
-						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; "start date": "August 2016",<br>
-						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; "end date": "December 2016"<br>
-						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&#125;<br>
-						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&#125;<br>
-					</span>
-				</div>
-			</div>
+				<!--&gt; Ryan.experience<br>-->
+				<!--<span class="answer">-->
+					<!--&nbsp;&nbsp;=&gt; &#123;<br>-->
+					<!--&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; "<a target="_blank" href="http://bricksimple.com">BrickSimple</a>": &#123;<br>-->
+					<!--&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; "role": "Built virtual reality apps for the HTC Vive using Unity",<br>-->
+					<!--&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; "start date": "June 2016",<br>-->
+					<!--&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; "end date": "August 2016"<br>-->
+					<!--&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&#125;,<br>-->
+
+					<!--&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; "<a target="_blank" href="http://www.geaviation.com">General Electric Aviation</a>": &#123;<br>-->
+					<!--&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; "role": "Built an OAuth npm module, built a resource tracking site",<br>-->
+					<!--&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; "start date": "August 2016",<br>-->
+					<!--&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; "end date": "December 2016"<br>-->
+					<!--&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&#125;<br>-->
+					<!--&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&#125;<br>-->
+				<!--</span>-->
+				<!--</div>-->
+			<!--</div>-->
 			<div id="work">
 				<div class="inner">
 					<p class="tagline">Projects</p>
 
 <!-- Example of a big tile although the image can't be as tall as this one
 					<div class="portfolio-thumb portfolio-big">
-						<a href="./minion.html"><img src="./media/minionfront.png"></a> 
+						<a href="./minion.html"><img src="./media/minionfront.png"></a>
 						<p class="description"><b>Minion</b> This is a minion</p>
 					</div>
 -->
 					<div class="row">
 						<div class="portfolio-thumb">
-							<a href="./switchblade.html"><img src="./media/sbthumb.png" alt="SwitchBlade Project"></a> 
+							<a href="./switchblade.html"><img src="./media/sbthumb.png" alt="SwitchBlade Project"></a>
 							<p><b>SwitchBlade</b></p>
 						</div>
 						<div class="portfolio-thumb">
-							<a href="./minion.html"><img src="./media/minionfront.png" alt="Minion Project"></a> 
+							<a href="./minion.html"><img src="./media/minionfront.png" alt="Minion Project"></a>
 							<p><b>Minion</b></p>
 						</div>
 					</div>
@@ -86,9 +86,9 @@
 							</a>
 							<p><b>Asteroids</b></p>
 						</div>
-						<div class="portfolio-thumb portfolio-big">
+						<div class="portfolio-thumb">
 							<a href="./starwars.html">
-								<img src="./media/asteroidthumb.png" alt="Star Wars Project">
+								<img src="./media/starWarsThumb.jpg" alt="Star Wars Project">
 							</a>
 							<p><b>Star Wars Edit</b></p>
 						</div>
@@ -100,6 +100,6 @@
 					&copy; 2018 Ryan Bell
 				</div>
 			</footer>
-					
+
 	</body>
 </html>
